[project]
name = "jax-flax-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "blackjax>=1.2.4",
    "brax>=0.11.0",
    "chromadb>=0.5.18",
    "diffrax>=0.6.0",
    "distrax>=0.1.5",
    "equinox>=0.11.8",
    "evosax>=0.1.6",
    "flashbax>=0.1.2",
    "flax>=0.10.1",
    "gymnax>=0.0.8",
    "jax-cosmo>=0.1.0",
    "jax-resnet>=0.0.4",
    "jax>=0.2.26",
    "jaxlib>=0.1.74",
    "jaxlie>=1.4.1",
    "jupyterlab>=4.3.0",
    "levanter>=1.1",
    "navix>=0.7.0",
    "numpy>=2.1.3",
    "optax>=0.2.3",
    "orbax>=0.1.9",
    "scikit-learn>=1.5.2",
    "sympy2jax>=0.0.5",
    "wandb>=0.18.6",
]
